Report version number of compiler

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ language:
 script:
   - make run_csv_test
   - if [ "$MAIN_BUILD" == "true" ]; then
+        $CXX --version;
         make code_cov;
         make valgrind;
     fi;
